SERVER-28983 Get rid of duplicated code in the aggregation command